edited my intro message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!--intro message -->
   <p>
     Welcome to my portfolio! I am a graduate student studying
-    rhetoric & technical communication. i would love to share a lot of my work, skills, and progress on here including some of my writing, if thats ok.
+    rhetoric & technical communication. i would love to share a lot of my work, skills, and progress on here including some of my writing.
   </p>
 
   <!-- this section is my picture and bio, i might move tis around later bot for consistency sake -->
