edited the CSS code to have a basic layout

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
   <!--intro message -->
   <p>
     Welcome to my portfolio! I am a graduate student studying
-    rhetoric & technical communication. i would love to share a lot of my work, skills, and progress on here including some of my writing.
-  </p>
+    rhetoric & technical communication. I hope to share my research work, writing and my skills. Please check my projects for more information
 
   <!-- this section is my picture and bio, i might move tis around later bot for consistency sake -->
-  <img src="profile.jpg" alt=" this is a selfie image of me in my traditional adire attire, i have my scarf on my head, almost wrapped like a hijab/veil and my hand is across my chest adorned with gold jewelry" width="300" height="450"/>
+  <img src="profile.jpg" alt=" this is an image of me sitted on a blue one sitter couch, i am wearing a white collar shirt with jeans and white headwrap on, i am smiling into the camera " width="400" height="450"/>
 
   <h1 id="about">About Me</h1>
-  <p> My name is Esosa Esezobor, and I'm from Benin, Nigeria. I work as a graduate assistant in the English Department, NMSU. My interests include language learning acquisition, UX Research & Design, technical writing and closed captioning. </p>
+  <p> My name is Esosa Esezobor, and I'm from Benin, Nigeria. I work as a teaching assistant in the English Department, NMSU. My interests include language learning acquisition, UX Research & Design, technical writing and closed captioning. </p>
 
   <!-- i guess this where i could attach projects from this class or my writing, depends -->
   <h2 id="projects">Projects</h2>
