commit feed back from instructor

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
   <h1 id="home">Sosa's Portfolio</h1>
 
   <!--intro message -->
+  <div class="welcome-box">
   <p>
     Welcome to my portfolio! I am a graduate student studying
-    rhetoric & technical communication. I hope to share my research work, writing and my skills. Please check my projects for more information
-
+    rhetoric & technical communication. I hope to share my research work,
+    writing and my skills. Please check my projects for more information.
+  </p>
+</div>
   <!-- this section is my picture and bio, i might move tis around later bot for consistency sake -->
   <img src="profile.jpg" alt=" this is an image of me sitted on a blue one sitter couch, i am wearing a white collar shirt with jeans and white headwrap on, i am smiling into the camera " width="400" height="450"/>
 
@@ -41,8 +44,10 @@
   </p>
 
   <!-- Contact Section for just my school email for now -->
-  <h2 id="contact">Contact</h2>
-  <p>Email: sosae@nmsu.edu</p>
+  <footer>
+  <p>Contact: <a href="mailto:sosae@nmsu.edu">sosae@nmsu.edu</a></p>
+  <p>© 2025 Sosa Esezobor</p>
+</footer>
 </body>
 
 </html>
