new html commit

--- a/index.html
+++ b/index.html
@@ -6,119 +6,46 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <title>Sosa's Portfolio</title>
   </head>
-
   <body>
-    <!-- Navigation -->
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#cv">CV</a>
-    </nav>
+  <!-- just going by the tips you gave in the announcement about having navigation, this is what i can think of here. i am also using my old portfolio that i created on weebly last year-->
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a> 
+    <a href="#projects">Projects</a> 
 
-    <!-- Header -->
-    <h1 id="home">Sosa's Portfolio</h1>
+  </nav>
 
-    <!-- Welcome Message -->
-    <div class="welcome-box">
-      <p>
-        Welcome to my portfolio! I am a graduate student studying Rhetoric &
-        Technical Communication. I hope to share my research, writing, and web
-        development work. Please explore my projects for more information about
-        my experience and skills.
-      </p>
-    </div>
+  <!-- for my heading, something simple, i can alter this much later i guess but this was what i used for my weebly, id keep it for consistency sake -->
+  <h1 id="home">Sosa's Portfolio</h1>
 
-    <!-- Image + About Section -->
-    <section id="about">
-      <img
-        src="images/profile.jpg"
-        alt="Image of Sosa: sitting on a blue couch, wearing a white collared shirt, jeans, and a white headwrap, smiling."
-      />
+  <!--intro message -->
+  <div class="welcome-box">
+  <p>
+    Welcome to my portfolio! I am a graduate student studying
+    rhetoric & technical communication. I hope to share my research work,
+    writing and my skills. Please check my projects for more information.
+  </p>
+</div>
+  <!-- this section is my picture and bio, i might move tis around later bot for consistency sake -->
+  <img src="profile.jpg" alt=" this is an image of me sitted on a blue one sitter couch, i am wearing a white collar shirt with jeans and white headwrap on, i am smiling into the camera " width="400" height="450"/>
 
-      <div>
-        <h1>About Me</h1>
-        <p>
-          My name is Esosa Esezobor, and I'm from Benin, Nigeria. I currently
-          work as a Teaching Assistant in the English Department at New Mexico
-          State University. My interests include language learning acquisition,
-          UX research & design, technical writing, and closed captioning.
-        </p>
-      </div>
-    </section>
+  <h1 id="about">About Me</h1>
+  <p> My name is Esosa Esezobor, and I'm from Benin, Nigeria. I work as a teaching assistant in the English Department, NMSU. My interests include language learning acquisition, UX Research & Design, technical writing and closed captioning. </p>
 
-    <!-- Projects Section -->
-    <h2 id="projects">Projects</h2>
+  <!-- i guess this where i could attach projects from this class or my writing, depends -->
+  <h2 id="projects">Projects</h2>
+  <p>
+    This is where I will be placing my first project from this class. Maybe I can include the UX testing report with Q4C here too
+  </p>
 
-    <div class="project-section">
-      <!-- Fiction Web Project -->
-      <div class="project-card">
-        <h3>Fiction Web Project</h3>
-        <p>
-          A collaborative fictional website created with my group for our Web
-          Development course. I contributed to building the site structure,
-          writing content, and supporting layout decisions. This project
-          demonstrates teamwork, storytelling, and front-end development skills.
-        </p>
-        <a class="project-link" href="YOUR-REPO-LINK-HERE" target="_blank">
-          View GitHub Repository
-        </a>
-        <br /><br />
-        <a class="project-link" href="YOUR-LIVE-LINK-HERE" target="_blank">
-          View Live Site
-        </a>
-      </div>
+  
 
-      <!-- UX Testing Report -->
-      <div class="project-card">
-        <h3>UX Testing Report (Q4C)</h3>
-        <p>
-          A usability testing project focused on analyzing user interactions,
-          documenting barriers, and recommending improvements based on UX
-          research methods. This report showcases my ability to conduct user
-          studies, synthesize findings, and communicate design recommendations.
-        </p>
-        <a
-          class="project-link"
-          href="LINK-TO-REPORT-PDF-OR-REPO"
-          target="_blank"
-        >
-          Read UX Testing Report
-        </a>
-      </div>
+  <!-- Contact Section for just my school email for now -->
+  <footer>
+  <p>Contact: <a href="mailto:sosae@nmsu.edu">sosae@nmsu.edu</a></p>
+  <p>© 2025 Sosa Esezobor</p>
+</footer>
+</body>
 
-      <!-- Past Work -->
-      <div class="project-card">
-        <h3>Additional Work</h3>
-        <p>
-          Throughout my academic and professional journey, I have produced
-          various research papers, writing samples, and creative projects
-          related to technical communication, languages, and user experience.
-          These works demonstrate my versatility and commitment to thoughtful,
-          accessible communication.
-        </p>
-        <a class="project-link" href="LINK-TO-YOUR-OTHER-WORK" target="_blank">
-          View Additional Samples
-        </a>
-      </div>
-    </div>
-
-    <!-- CV Section -->
-    <h2 id="cv">Curriculum Vitae</h2>
-    <p style="text-align: center">You can view my CV below:</p>
-
-    <iframe
-      src="pdf/cv.pdf"
-      width="100%"
-      height="600px"
-      style="border: 2px solid #6f19c5; border-radius: 8px"
-    >
-    </iframe>
-
-    <!-- Footer -->
-    <footer>
-      <p>Contact: <a href="mailto:sosae@nmsu.edu">sosae@nmsu.edu</a></p>
-      <p>© 2025 Sosa Esezobor</p>
-    </footer>
-  </body>
+</html>
 </html>
