added div class for fictional business website

--- a/index.html
+++ b/index.html
@@ -37,8 +37,23 @@
   <p>
     This is where I will be placing my first project from this class. Maybe I can include the UX testing report with Q4C here too
   </p>
+<div class="project-section">
 
-  
+    <!-- Fiction Web Project -->
+    <div class="project-card">
+      <h3>Fiction Web Project</h3>
+      <p>
+        A collaborative fictional business website for Los Pollos Hermanos from the Breaking Bad show. This was created with my team members from my Web Development class, Aaron Treolar and Eli Severns. 
+        I contributed to building the site structure, writing content, and layout decisions. 
+      </p>
+  <a class="project-link" href="https://github.com/atreloar2025/lospolloshermanos-businesstech" target="_blank">
+        View GitHub Repository
+      </a>
+      <br><br>
+      <a class="project-link" href="https://atreloar2025.github.io/lospolloshermanos-businesstech/" target="_blank">
+        View Live Site
+      </a>
+    </div>
 
   <!-- Contact Section for just my school email for now -->
   <footer>
