--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- i guess this where i could attach projects from this class or my writing, depends -->
   <h2 id="projects">Projects</h2>
   <p>
-    This is where I will be placing my first project from this class. Maybe I can include the UX testing report with Q4C here too
+    Here are some projects I have collaborated with my peers and colleagues in my Web Development and User Assistance classes throughout my masters program at NMSU.
   </p>
 <div class="project-section">
 
