commit most recent changes to html

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <!--intro message -->
   <div class="welcome-box">
   <p>
-    Welcome to my portfolio! I am a graduate student studying
-    rhetoric & technical communication. I hope to share my research work,
-    writing and my skills. Please check my projects for more information.
+    Welcome to my portfolio! I am a second year master's student studying
+    Rhetoric & Professional Communication. Here, I hope to share my research,
+    writing and collaborative work. Please check my projects for more information.
   </p>
 </div>
   <!-- this section is my picture and bio, i might move tis around later bot for consistency sake -->
   <img src="profile.jpg" alt=" this is an image of me sitted on a blue one sitter couch, i am wearing a white collar shirt with jeans and white headwrap on, i am smiling into the camera " width="400" height="450"/>
 
   <h1 id="about">About Me</h1>
-  <p> My name is Esosa Esezobor, and I'm from Benin, Nigeria. I work as a teaching assistant in the English Department, NMSU. My interests include language learning acquisition, UX Research & Design, technical writing and closed captioning. </p>
+  <p> My name is Sosa Esezobor. I grew up in a big city, in Lagos, Nigeria. I currently work as a teaching assistant in the English Department, NMSU where I teach Technical & Professional Communication. My research interests include UX Research & Design, sound politics and closed captioning. I am also a digital content creator and beauty enthusiast, i create makeup tutorials and videos social media for fun!</p>
 
   <!-- i guess this where i could attach projects from this class or my writing, depends -->
   <h2 id="projects">Projects</h2>
@@ -41,9 +41,9 @@
 
     <!-- Fiction Web Project -->
     <div class="project-card">
-      <h3>Fiction Web Project</h3>
+      <h3>Fiction Business Website Project</h3>
       <p>
-        A collaborative fictional business website for Los Pollos Hermanos from the Breaking Bad show. This was created with my team members from my Web Development class, Aaron Treolar and Eli Severns. 
+        This is a collaborative fictional business website for Los Pollos Hermanos from the Breaking Bad show. This was created with my team members from my Web Development class, Aaron Treolar and Eli Severns. 
         I contributed to building the site structure, writing content, and layout decisions. 
       </p>
   <a class="project-link" href="https://github.com/atreloar2025/lospolloshermanos-businesstech" target="_blank">
