commit all changes

--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
   <img src="profile.jpg" alt=" this is an image of me sitted on a blue one sitter couch, i am wearing a white collar shirt with jeans and white headwrap on, i am smiling into the camera " width="400" height="450"/>
 
   <h1 id="about">About Me</h1>
-  <p> My name is Sosa Esezobor. I grew up in a big city, in Lagos, Nigeria. I currently work as a teaching assistant in the English Department, NMSU where I teach Technical & Professional Communication. My research interests include UX Research & Design, sound politics and closed captioning. I am also a digital content creator and beauty enthusiast, i create makeup tutorials and videos social media for fun!</p>
+  <p> My name is Sosa Esezobor. I grew up in a big city, Lagos, Nigeria. In August 2024, I moved from my home in Nigeria to Las Cruces, New Mexico to begin my masters program in Rhetoric & Professional Communication at the NMSU, English Department. I also work as a teaching assistant where I teach Technical & Professional Communication. When I am not teaching or attending classes, I coordinate activities and mentor tutors at the University Writing Center. My research interests include UX Research & Design, sound politics and closed captioning. I am also a digital content creator and beauty enthusiast, i create makeup tutorials and videos social media for fun!</p>
 
   <!-- i guess this where i could attach projects from this class or my writing, depends -->
   <h2 id="projects">Projects</h2>
   <p>
-    Here are some projects I have collaborated with my peers and colleagues in my Web Development and User Assistance classes throughout my masters program at NMSU.
+    Here are some projects I have completed in my Web Development class throughout my masters program at NMSU.
   </p>
 <div class="project-section">
-
     <!-- Fiction Web Project -->
     <div class="project-card">
       <h3>Fiction Business Website Project</h3>
@@ -54,8 +53,24 @@
         View Live Site
       </a>
     </div>
-
-  <!-- Contact Section for just my school email for now -->
+<div class="project-card">
+  <h3>First Website as a Beginner Web Developer(MDN Tutorial)</h3>
+  <p>
+    This was the very first website I built while learning HTML, CSS and JavaScript
+    using the MDN Web Docs “Your First Website” tutorial. At first, the
+    structure and tags were confusing, but as the course progressed, the
+    concepts became clearer and I gained confidence in building pages
+    from scratch.
+  </p>
+  <a class="project-link" href="https://github.com/SosaEsezobor/web-projects.git" target="_blank">
+    View GitHub Repository
+  </a>
+  <br><br>
+  <a class="project-link" href="https://sosaesezobor.github.io/web-projects/" target="_blank">
+    View Live Site
+  </a>
+</div>
+  
   <footer>
   <p>Contact: <a href="mailto:sosae@nmsu.edu">sosae@nmsu.edu</a></p>
   <p>© 2025 Sosa Esezobor</p>
