--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h3>First Website as a Beginner Web Developer(MDN Tutorial)</h3>
   <p>
     This was the very first website I built while learning HTML, CSS and JavaScript
-    using the MDN Web Docs “Your First Website” tutorial. At first, the
+    using the MDN Websitw “Your First Website” tutorial. At first, the
     structure and tags were confusing, but as the course progressed, the
     concepts became clearer and I gained confidence in building pages
     from scratch.
@@ -70,7 +70,29 @@
     View Live Site
   </a>
 </div>
-  
+  <!-- Princess Tiana CSS Project -->
+<div class="project-card">
+  <h3>Princess Tiana Themed CSS Website</h3>
+  <p>
+    A creative CSS-focused project inspired by Princess Tiana from Disney’s *The Princess and the Frog*.
+    The goal of this assignment was to design a fully styled webpage using only HTML and CSS.
+    My design earned extra credit for creativity and visuals.
+  </p>
+  <img 
+    src="images/tiana.png" 
+    alt="Screenshot of my Princess Tiana CSS project" 
+    class="project-image"
+  />
+
+  <a class="project-link" href="https://github.com/SosaEsezobor/tiana.styled.git" target="_blank">
+    View GitHub Repository
+  </a>
+  <br><br>
+  <a class="project-link" href="https://sosaesezobor.github.io/tiana.styled/" target="_blank">
+    View Live Site
+  </a>
+</div>
+
   <footer>
   <p>Contact: <a href="mailto:sosae@nmsu.edu">sosae@nmsu.edu</a></p>
   <p>© 2025 Sosa Esezobor</p>
