commit all changes to html final

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   <img src="profile.jpg" alt=" this is an image of me sitted on a blue one sitter couch, i am wearing a white collar shirt with jeans and white headwrap on, i am smiling into the camera " width="400" height="450"/>
 
   <h1 id="about">About Me</h1>
-  <p> My name is Sosa Esezobor. I grew up in a big city, Lagos, Nigeria. In August 2024, I moved from my home in Nigeria to Las Cruces, New Mexico to begin my masters program in Rhetoric & Professional Communication at the NMSU, English Department. I also work as a teaching assistant where I teach Technical & Professional Communication. When I am not teaching or attending classes, I coordinate activities and mentor tutors at the University Writing Center. My research interests include UX Research & Design, sound politics and closed captioning. I am also a digital content creator and beauty enthusiast, i create makeup tutorials and videos social media for fun!</p>
+  <p> My name is Sosa Esezobor. I grew up in a big city, Lagos, Nigeria. In August 2024, I moved from my home in Nigeria to Las Cruces, New Mexico to begin my masters program in Rhetoric & Professional Communication at the NMSU English Department. I also work as a teaching assistant where I teach Technical & Professional Communication. When I am not teaching or attending classes, I coordinate activities and mentor tutors at the University Writing Center. My research interests include UX Research & Design, sound politics and closed captioning. I am also a digital content creator and beauty enthusiast and I create makeup tutorials & videos on social media for fun!</p>
 
   <!-- i guess this where i could attach projects from this class or my writing, depends -->
   <h2 id="projects">Projects</h2>
   <p>
-    Here are some projects I have completed in my Web Development class throughout my masters program at NMSU.
+    Here are some projects I have completed in my Web Development class.
   </p>
 <div class="project-section">
     <!-- Fiction Web Project -->
@@ -43,7 +43,7 @@
       <h3>Fiction Business Website Project</h3>
       <p>
         This is a collaborative fictional business website for Los Pollos Hermanos from the Breaking Bad show. This was created with my team members from my Web Development class, Aaron Treolar and Eli Severns. 
-        I contributed to building the site structure, writing content, and layout decisions. 
+        I contributed to developing the site structure, writing content, and layout decisions. 
       </p>
   <a class="project-link" href="https://github.com/atreloar2025/lospolloshermanos-businesstech" target="_blank">
         View GitHub Repository
@@ -57,9 +57,9 @@
   <h3>First Website as a Beginner Web Developer(MDN Tutorial)</h3>
   <p>
     This was the very first website I built while learning HTML, CSS and JavaScript
-    using the MDN Websitw “Your First Website” tutorial. At first, the
-    structure and tags were confusing, but as the course progressed, the
-    concepts became clearer and I gained confidence in building pages
+    using the MDN “Your First Website” tutorial. At first, the
+    structure and tags were difficult and confusing, but as the course progressed, the
+    concepts became clearer and I got confident in building web pages
     from scratch.
   </p>
   <a class="project-link" href="https://github.com/SosaEsezobor/web-projects.git" target="_blank">
@@ -74,7 +74,7 @@
 <div class="project-card">
   <h3>Princess Tiana Themed CSS Website</h3>
   <p>
-    A creative CSS-focused project inspired by Princess Tiana from Disney’s *The Princess and the Frog*.
+    A creative CSS-focused project inspired by Princess Tiana from Disney’s The Princess and the Frog.
     The goal of this assignment was to design a fully styled webpage using only HTML and CSS.
     My design earned extra credit for creativity and visuals.
   </p>
